# music_db_assistance

./: CMakeLists.txt  LICENSE  main.cpp
api/: SQLiteBD.py  models.py  server.py
data/: music_database.db
includes/: IMusic.h  SQLiteDB.h  consts.h  controllers.h  functiontools.h  models.h
includes/hpp/: out.hpp
scripts/: __init__.py  mp3tools.py
src/: IMusic.cpp  SQLiteDB.cpp  controller.cpp  functiontools.cpp
